--- a/generator/templates/manifests/deploykf-core/deploykf-profiles-generator/templates/profile-tools--kubeflow-pipelines.yaml
+++ b/generator/templates/manifests/deploykf-core/deploykf-profiles-generator/templates/profile-tools--kubeflow-pipelines.yaml
@@ -143,6 +143,9 @@ spec:
                 - {{ $target_secret__name | quote }}
               namespaces:
                 - {{ $target_secret__namespace | quote }}
+              operations:
+                - CREATE
+                - UPDATE
               selector:
                 matchLabels:
                   generate.kyverno.io/policy-name: {{ $this_policy_name | quote }}
