--- a/generator/templates/manifests/deploykf-core/deploykf-auth/templates/oauth2-proxy/Deployment.yaml
+++ b/generator/templates/manifests/deploykf-core/deploykf-auth/templates/oauth2-proxy/Deployment.yaml
@@ -81,7 +81,7 @@ spec:
               port: http
           readinessProbe:
             httpGet:
-              path: /ping
+              path: /ready
               port: http
           volumeMounts:
             - name: oauth2-proxy-config
