--- a/generator/templates/manifests/deploykf-core/deploykf-auth/templates/oauth2-proxy/Secret-config.yaml
+++ b/generator/templates/manifests/deploykf-core/deploykf-auth/templates/oauth2-proxy/Secret-config.yaml
@@ -82,8 +82,22 @@ skip_provider_button = true
 ## oauth2-proxy does not verify nonce claim by default
 insecure_oidc_skip_nonce = false
 
-# use PKCE code challenges
+## use PKCE code challenges
 code_challenge_method = "S256"
+
+################
+## bearer token
+################
+
+## allow bearer tokens to be used for authentication
+skip_jwt_bearer_tokens = true
+
+## trust audience claims used by other known dex clients
+oidc_extra_audiences = [
+  {{- if .Values.dex.clients.kubeflowPipelinesSDK.enabled }}
+  {{ .Values.dex.clients.kubeflowPipelinesSDK.clientId | quote }}
+  {{- end }}
+]
 
 ################
 ## cookie
