--- a/generator/templates/manifests/deploykf-opt/deploykf-minio/templates/ClusterPolicy--restart-on-secret-updates.yaml
+++ b/generator/templates/manifests/deploykf-opt/deploykf-minio/templates/ClusterPolicy--restart-on-secret-updates.yaml
@@ -14,7 +14,7 @@
 {{- $secret_list__env_vars := (include "deploykf-minio.secret_list__env_vars" .) | fromYamlArray | uniq }}
 
 {{- if $secret_list__env_vars }}
-apiVersion: kyverno.io/v2beta1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: deploykf-minio--restart-on-secret-updates
