--- a/generator/templates/manifests/deploykf-opt/deploykf-mysql/templates/ClusterPolicy--restart-on-secret-updates.yaml
+++ b/generator/templates/manifests/deploykf-opt/deploykf-mysql/templates/ClusterPolicy--restart-on-secret-updates.yaml
@@ -25,7 +25,7 @@
 {{- $secret_list__env_vars := (include "deploykf-mysql.secret_list__env_vars" .) | fromYamlArray | uniq }}
 
 {{- if $secret_list__env_vars }}
-apiVersion: kyverno.io/v2beta1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: deploykf-mysql--restart-on-secret-updates
