--- a/generator/templates/manifests/deploykf-core/deploykf-auth/templates/ClusterPolicy--restart-on-secret-updates.yaml
+++ b/generator/templates/manifests/deploykf-core/deploykf-auth/templates/ClusterPolicy--restart-on-secret-updates.yaml
@@ -42,7 +42,7 @@
 {{- $secret_list__env_vars := (include "deploykf-auth.secret_list__env_vars" .) | fromYamlArray | uniq }}
 
 {{- if $secret_list__env_vars }}
-apiVersion: kyverno.io/v2beta1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: deploykf-auth--restart-on-secret-updates
