--- a/generator/templates/manifests/deploykf-core/deploykf-auth/templates/dex/Secret-config.yaml
+++ b/generator/templates/manifests/deploykf-core/deploykf-auth/templates/dex/Secret-config.yaml
@@ -116,6 +116,16 @@ staticClients:
     {{- end }}
   {{- end }}
 
+  {{ if .Values.dex.clients.kubeflowPipelinesSDK.enabled -}}
+  ## the OpenID client for "Kubeflow Pipelines SDK"
+  - name: "Kubeflow Pipelines SDK"
+    id: {{ .Values.dex.clients.kubeflowPipelinesSDK.clientId | quote }}
+    ## NOTE: this client is used on end-user machines, so it does not have a client secret
+    public: true
+    redirectURIs:
+      - "urn:ietf:wg:oauth:2.0:oob"
+  {{- end }}
+
 ## configs for upstream identity providers for authenticating users
 {{- if .Values.dex.connectors }}
 connectors:
