--- a/generator/templates/manifests/deploykf-dependencies/kyverno/values.yaml
+++ b/generator/templates/manifests/deploykf-dependencies/kyverno/values.yaml
@@ -12,6 +12,11 @@ rules:
   ## there permissions are so that kyverno can mutate these resources for automatic restarts on secret changes
   - apiGroups: [ "apps" ]
     resources: [ "statefulsets" ]
+  {{<- if .Values.kubeflow_tools.poddefaults_webhook.enabled >}}
+  ## these permissions are needed for the automatic creation of PodDefaults
+  - apiGroups: [ "kubeflow.org" ]
+    resources: [ "poddefaults" ]
+  {{<- end >}}
 {{<- end >}}
 {{<- $extra_resources := ((tmpl.Exec "default_extra_resources" .) | yaml).rules >}}
 {{<- range $rule := .Values.deploykf_dependencies.kyverno.extraResourceRules >}}
@@ -27,6 +32,13 @@ deployKF:
     {{<- range $manifest := .Values.deploykf_dependencies.kyverno.extraManifests >}}
     - {{< (tpl $manifest $) | quote >}}
     {{<- end >}}
+
+  kyverno:
+    clusterPolicies:
+      imagePullSecrets:
+        enabled: {{< .Values.deploykf_dependencies.kyverno.clusterPolicies.imagePullSecrets.enabled | conv.ToBool >}}
+        excludeNamespaces: {{< .Values.deploykf_dependencies.kyverno.clusterPolicies.imagePullSecrets.excludeNamespaces | toJSON >}}
+        registryCredentials: {{< .Values.deploykf_dependencies.kyverno.clusterPolicies.imagePullSecrets.registryCredentials | toJSON >}}
 
 
 ########################################
@@ -81,7 +93,7 @@ kyverno:
 
   ## Admission controller configuration
   admissionController:
-    replicas: ~
+    replicas: {{< .Values.deploykf_dependencies.kyverno.admissionController.replicas | conv.ToInt >}}
     initContainer:
       image:
         registry: ""
@@ -105,7 +117,7 @@ kyverno:
   ## Background controller configuration
   backgroundController:
     enabled: true
-    replicas: ~
+    replicas: {{< .Values.deploykf_dependencies.kyverno.backgroundController.replicas | conv.ToInt >}}
     image:
       registry: ""
       repository: {{< .Values.deploykf_dependencies.kyverno.images.kyvernoBackgroundController.repository | quote >}}
@@ -125,7 +137,7 @@ kyverno:
   ## Cleanup controller configuration
   cleanupController:
     enabled: true
-    replicas: ~
+    replicas: {{< .Values.deploykf_dependencies.kyverno.cleanupController.replicas | conv.ToInt >}}
     image:
       registry: ""
       repository: {{< .Values.deploykf_dependencies.kyverno.images.kyvernoCleanupController.repository | quote >}}
@@ -144,7 +156,7 @@ kyverno:
   ## Reports controller configuration
   reportsController:
     enabled: true
-    replicas: ~
+    replicas: {{< .Values.deploykf_dependencies.kyverno.reportsController.replicas | conv.ToInt >}}
     image:
       registry: ""
       repository: {{< .Values.deploykf_dependencies.kyverno.images.kyvernoReportsController.repository | quote >}}
