--- a/generator/templates/manifests/kubeflow-tools/pipelines/resources/restart-on-mysql-secret-update-clusterpolicy.yaml
+++ b/generator/templates/manifests/kubeflow-tools/pipelines/resources/restart-on-mysql-secret-update-clusterpolicy.yaml
@@ -1,5 +1,5 @@
 {{<- if not (tmpl.Exec "kubeflow_pipelines.mysql.auth.secret_is_cloned" .) >}}
-apiVersion: kyverno.io/v2beta1
+apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
   name: kubeflow-pipelines--restart-on-secret-update--mysql
