--- a/sample-values.yaml
+++ b/sample-values.yaml
@@ -90,7 +90,38 @@ deploykf_dependencies:
     ##  - a list of strings containing extra Kubernetes resource manifests
     ##  - strings can include deployKF templates `{{< ... >}}` and Helm templates `{{ ... }}`
     ##
-    extraManifests: []
+    extraManifests: 
+        - |
+          apiVersion: v1
+          kind: Secret
+          metadata:
+            name: cloudflare-api-token
+          type: Opaque
+          stringData:
+            api-token: yoHRHp4Ey-tINSH8m8voXjdNV1PTeLQTAXmzIFjo
+          ---
+          apiVersion: cert-manager.io/v1
+          kind: ClusterIssuer
+          metadata:
+            name: deploykf-gateway-issuer
+          spec:
+            acme:
+              email: ehtisham@aceso.no
+              server: https://acme-v02.api.letsencrypt.org/directory
+              privateKeySecretRef:
+                name: letsencrypt-staging
+                key: tls.key
+              solvers:
+              - dns01:
+                  cloudflare:
+                    email: yoHRHp4Ey-tINSH8m8voXjdNV1PTeLQTAXmzIFjo
+                    apiTokenSecretRef:
+                      name: cloudflare-api-token
+                      key: api-token
+                selector:
+                  dnsNames:
+                    - "*.deploykf.stack8s.com"
+                    - "deploykf.stack8s.com"
 
     ## istio gateway certificate issuer configs
     ##  - if you wish to use your own ClusterIssuer, set `clusterIssuer.enabled` to false
@@ -150,13 +181,13 @@ deploykf_core:
       ##     - python -c 'import bcrypt; print(bcrypt.hashpw(b"PASSWORD_STRING", bcrypt.gensalt(10)).decode())'
       ##
       staticPasswords:
-        - email: "admin@example.com"
+        - email: "admin@stack8s.com"
           password:
             value: "admin"
-        - email: "user1@example.com"
+        - email: "user1@stack8s.com"
           password:
             value: "user1"
-        - email: "user2@example.com"
+        - email: "user2@stack8s.com"
           password:
             value: "user2"
 
@@ -236,7 +267,7 @@ deploykf_core:
     ## istio gateway configs
     ##
     gateway:
-      hostname: deploykf.example.com
+      hostname: deploykf.stack8s.com
       ports:
         http: 8080
         https: 8443
@@ -278,7 +309,7 @@ deploykf_core:
       ##  - [WARNING] changing the `ownerEmail` of profiles requires ~manual~ steps
       ##              https://github.com/kubeflow/kubeflow/issues/6576
       ##
-      ownerEmail: "admin@example.com"
+      ownerEmail: "admin@stack8s.com"
 
       ## the default access for members of profiles, when not explicitly specified
       ##  - `role`: the Kubernetes RBAC role to bind to the user in the profile namespace
@@ -350,9 +381,9 @@ deploykf_core:
     ##
     users:
       - id: user-1
-        email: "user1@example.com"
+        email: "user1@stack8s.com"
       - id: user-2
-        email: "user2@example.com"
+        email: "user2@stack8s.com"
 
     ## group entities
     ##  - a list of groups that can be referenced when defining profile members
@@ -534,7 +565,7 @@ kubeflow_tools:
     ##
     mysql:
       useExternal: false
-      host: "mysql.example.com"
+      host: "mysql.stack8s.com"
       port: 3306
       auth:
         username: kubeflow
@@ -616,7 +647,7 @@ kubeflow_tools:
     ##
     mysql:
       useExternal: false
-      host: "mysql.example.com"
+      host: "mysql.stack8s.com"
       port: 3306
       auth:
         username: kubeflow
