--- a/sample-values.yaml
+++ b/sample-values.yaml
@@ -286,8 +286,9 @@ deploykf_core:
     ##
     gatewayService:
       name: deploykf-gateway
-      annotations: {}
-      type: ClusterIP
+      annotations: 
+        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      type: LoadBalancer
 
 
   ## --------------------------------------
