sample values issuer

--- a/sample-values.yaml
+++ b/sample-values.yaml
@@ -107,7 +107,7 @@ deploykf_dependencies:
           spec:
             acme:
               email: ehtisham@aceso.no
-              server: https://acme-staging-v02.api.letsencrypt.org/directory
+              server: https://acme-v02.api.letsencrypt.org/directory
               privateKeySecretRef:
                 name: letsencrypt-staging
                 key: tls.key
